Change log for zeit.web
=======================

2.72 (unreleased)
-----------------

- MAINT: Fix pysolr error handling of non-ascii server responses


2.71.2 (2016-04-12)
-------------------

- HOTFIX: Add a bit more teaser margin

- HOTFIX: Add more space to ZMO comment counter

- HOTFIX: Make images in parquet feeds (spektrum, zett) work again

- HOTFIX: Make old-style <intial> paragraphs work again

- BUG-377: Ensure correct sort order for search result area

- FIX: Handle non-ascii author email addresses

- MAINT: Send per-request memory delta to statsd

- MAINT: Polish topic teaser variant


2.71.1 (2016-04-11)
-------------------

- HOTFIX: Include ad-tile in ZMO minor


2.71 (2016-04-11)
-----------------

- ZON-1626: Update ZMO-CPs to the z.c.cp-3.x data model,
            update CSS and templates to the ZON best practises

- ZON-2878: Allow specifying a background color for teaser images with
            transparent backgrounds


2.70 (2016-04-11)
-----------------

- FIX: Handle non-ascii usernames in nojs comment form

- BUG-346: Limit the number of items in jobbox

- BUG-385: Consider paragraph length when inserting ads

- ZON-2494: Implement stoa in-article-block

- ZON-2870: Implement login cut mark for framebuilder

- ZON-2651: Include SSO information in the JS rawr config object

- ZON-2890: Add packshot with follow-us button and subscription box

- ZON-2930: Add separate feed `rss-socialflow-facebook-zco`

- ZON-2913: Display ads in ZETT parquet

- ZON-2946: Hide infobox tab counter for single tabs

- FIX: Be more defensive in several places (Bugsnag)


2.69 (2016-04-04)
-----------------

- MAINT: Add a11y to table of contents

- ZON-2893: Support all content blocks in ZEIT Campus articles

- ZON-2776: Implement 2nd version of ZCO topic teaser and refactor standard
  topic teaser

- ZON-2889: Add new graphical topic teaser


2.68 (2016-03-31)
-----------------

- ZON-2522: Move comments to core

- MAINT: Use trio area consistently
