@@ -4,6 +4,8 @@ Change log for zeit.web
 2.72 (unreleased)
 -----------------
 
+- HOTFIX: Make ranking areas work again on dynamic centerpages
+
 - MAINT: Fix pysolr error handling of non-ascii server responses
 
 
